# form-forge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  biome.jsonc  clippy.toml  compose.coolify.yml  compose.dev.yml  compose.e2e.yml  compose.prod.yml  compose.test.yml  compose.yml  deny.toml  global-setup.ts  global-teardown.ts  justfile  mkdocs.yml  package.json  playwright.config.ts  playwright.docker.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json  turbo.json
.cargo/: audit.toml
.claude/: CLAUDE.md
.codegraph/: config.json
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  ci.yml  docker.yml  docs.yml  frontend-ci.yml  playwright.yml  release.yml  security-audit.yml  verify-openapi.yml
.junie/: guidelines.md
actions/adapters/pdf/: Cargo.toml
actions/adapters/pdf/src/: adapter.rs
actions/adapters/web/src/: error.rs  handler.rs
actions/core/js/: dnd_helpers.js
actions/core/src/: action.rs  error.rs
apps/api/: .dockerignore  .env.example  .gitignore  Cargo.toml  clippy.toml  deny.toml  package.json
apps/api/.cargo/: audit.toml
apps/api/crates/actions/adapters/pdf/: Cargo.toml
apps/api/crates/actions/adapters/web/: Cargo.toml
apps/api/crates/actions/adapters/web/src/: error.rs  handler.rs
apps/api/crates/actions/core/: Cargo.toml
apps/api/crates/actions/core/js/: dnd-helpers.js  dnd_helpers.js  package.json
apps/api/crates/actions/core/src/: action.rs
apps/api/crates/actions/core/src/ports/: driven.rs  driving.rs
apps/api/crates/common/: Cargo.toml
apps/api/crates/common/src/: db.rs  error.rs  lib.rs  multipart_form.rs  telemetry.rs
apps/api/crates/sheets/adapters/db/: Cargo.toml
apps/api/crates/sheets/adapters/db/src/: adapter.rs
apps/api/crates/sheets/adapters/pdf/: Cargo.toml
apps/api/crates/sheets/adapters/pdf/src/: adapter.rs
apps/api/crates/sheets/adapters/pdf/tests/test_utils/: mod.rs
apps/api/crates/sheets/adapters/s3/: Cargo.toml
apps/api/crates/sheets/adapters/s3/src/: adapter.rs  config.rs
apps/api/crates/sheets/adapters/storage/: Cargo.toml
apps/api/crates/sheets/adapters/storage/src/: adapter.rs
apps/api/crates/sheets/adapters/web/: Cargo.toml
apps/api/crates/sheets/adapters/web/src/: error.rs  handler.rs
apps/api/crates/sheets/core/: Cargo.toml
apps/api/crates/sheets/core/src/: sheet.rs
apps/api/crates/sheets/core/src/ports/: driven.rs  driving.rs
apps/api/migrations/: 20260125120000_create_failed_sheet_deletions.sql  20260227120000_create_attached_actions.sql
apps/api/src/: health.rs  lib.rs  main.rs  openapi.rs
apps/api/tests/: test_action_api.rs  test_sheet_api.rs
apps/api/tests/test_utils/: mod.rs
apps/native/: index.html  package.json  tsconfig.json  vite.config.ts
apps/native/src/: app.tsx  main.tsx  router.tsx
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/crates/sheets_fs/: Cargo.toml
apps/native/src-tauri/crates/sheets_fs/src/: adapter.rs
apps/native/src-tauri/crates/sheets_libsql/: Cargo.toml
apps/native/src-tauri/crates/sheets_libsql/src/: adapter.rs
apps/native/src-tauri/src/: lib.rs
apps/web/: next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/actions/adapters/pdf/: Cargo.toml
backend/actions/adapters/pdf/src/: adapter.rs
backend/actions/adapters/web/: Cargo.toml
backend/actions/core/: Cargo.toml
backend/actions/core/js/: dnd_helpers.js
backend/actions/core/src/: lib.rs
backend/common/src/: db.rs  multipart_form.rs
backend/migrations/: 20250830213000_create_sheet_reference.sql
backend/sheets/adapters/db/: Cargo.toml
backend/sheets/adapters/pdf/: Cargo.toml
backend/sheets/adapters/pdf/src/: adapter.rs
backend/sheets/adapters/pdf/tests/: test_sheet_pdf_adapter.rs
backend/sheets/adapters/web/src/: error.rs  handler.rs
backend/sheets/core/src/: error.rs  sheet.rs
backend/src/: main.rs
common/: Cargo.toml
common/src/: app_config.rs  db.rs  error.rs  lib.rs  multipart_form.rs  telemetry.rs
config/: lifecycle.json
crates/actions_core/: Cargo.toml
crates/actions_core/js/: dnd-helpers.js  package.json
crates/actions_core/src/: action.rs  error.rs
crates/actions_pdf/: Cargo.toml
crates/actions_pdf/src/: adapter.rs
crates/common_pdf/: Cargo.toml
crates/common_pdf/src/: lib.rs
crates/common_telemetry/: Cargo.toml
crates/common_telemetry/src/: lib.rs
crates/sheets_core/: Cargo.toml
crates/sheets_core/src/: sheet.rs
crates/sheets_core/src/ports/: driving.rs
crates/sheets_pdf/: Cargo.toml
crates/sheets_pdf/tests/test_utils/: mod.rs
docker/: api.Dockerfile  nginx.Dockerfile  nginx.prod.conf  otel-collector-config.yaml  otel-collector.Dockerfile  playwright.Dockerfile  web.Dockerfile
docs/: desktop.md  hosting.md  index.md
docs/assets/usage/: usage-flow.webm
docs/explanation/: how-it-works.md
docs/players/: calculations.md  index.md
docs/reference/: api.md  index.md
features/documents/core/: Cargo.toml
features/sheets/core/: Cargo.toml
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  turbo.json
frontend/apps/native/: package.json  tsconfig.json
frontend/apps/web/: eslint.config.js  next.config.ts  package.json  tsconfig.json
sheets/adapters/db/: Cargo.toml
sheets/adapters/pdf/: Cargo.toml
sheets/adapters/storage/: Cargo.toml
sheets/adapters/web/: Cargo.toml
sheets/core/: Cargo.toml
sheets/core/src/: error.rs  sheet.rs
src/: main.rs
tests/: docs-screenshots.spec.ts  fixtures.ts  sheet-workflow.spec.ts  test_action_api.rs  test_attach_action.rs  test_sheet_api.rs  test_sheet_upload.rs
tests/fixtures/: DnD_5E_CharacterSheet_FormFillable_bindings.json
tests/pages/: sheet-viewer-page.ts  upload-page.ts
tests/test_utils/: mod.rs
tests/utils/: pdf-utils.ts
(+84 files in other folders)
