[package]
name = "form-forge"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["sheets/core", "sheets/adapters/web", "sheets/adapters/storage", "common", "sheets/adapters/db"]

[workspace.dependencies]
actix-web = "4"
actix-multipart = "0.7"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
async-trait = "0.1"

[dependencies]
sheets_core = { path = "sheets/core" }
sheets_web = { path = "sheets/adapters/web" }
sheets_storage = { path = "sheets/adapters/storage" }
sheets_db = { path = "sheets/adapters/db" }
common = { path = "common" }
actix-web.workspace = true
tracing-actix-web.workspace = true
anyhow.workspace = true
uuid.workspace = true

[features]
tracing-logs = []
