[package]
name = "form-forge"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["sheets/core", "sheets/adapters/web", "sheets/adapters/storage", "common", "sheets/adapters/db"]

[workspace.dependencies]
actix-web = "4"
actix-multipart = "0.7"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid"] }
dotenv = "0.15"
tempdir = "0.3"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres", "blocking"] }
rstest = "0.26"
pretty_assertions = "1.4"

[dependencies]
sheets_core = { path = "sheets/core" }
sheets_web = { path = "sheets/adapters/web" }
sheets_storage = { path = "sheets/adapters/storage" }
sheets_db = { path = "sheets/adapters/db" }
common = { path = "common" }
actix-web.workspace = true
tracing-actix-web.workspace = true
anyhow.workspace = true
uuid.workspace = true
sqlx.workspace = true
dotenv.workspace = true

[dev-dependencies]
tempdir.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true

[features]
tracing-logs = []
