[package]
name = "form-forge"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "common",
    "sheets/core",
    "sheets/adapters/web",
    "sheets/adapters/storage",
    "sheets/adapters/db",
    "sheets/adapters/pdf",
    "actions/core",
    "actions/adapters/web",
    "actions/adapters/pdf",
]

[workspace.dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-files = "0.6.7"
actix-cors = "0.7.1"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid"] }
tempfile = "3.21"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["postgres", "blocking"] }
rstest = "0.26"
pretty_assertions = "1.4"
dotenvy = "0.15"
tokio = { version = "1.47", features = ["rt", "macros"] }
mockall = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lopdf = "0.38"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
utoipa-actix-web = "0.1"
validator = { version = "0.20", features = ["derive"] }

[dependencies]
common = { path = "common" }
sheets_core = { path = "sheets/core" }
sheets_web = { path = "sheets/adapters/web" }
sheets_storage = { path = "sheets/adapters/storage" }
sheets_db = { path = "sheets/adapters/db" }
sheets_pdf = { path = "sheets/adapters/pdf" }
actions_core = { path = "actions/core" }
actions_web = { path = "actions/adapters/web" }
actions_pdf = { path = "actions/adapters/pdf" }
actix-web.workspace = true
actix-cors.workspace = true
tracing-actix-web.workspace = true
anyhow.workspace = true
uuid.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-actix-web.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
lopdf.workspace = true

[features]
default = ["pretty-logs"]
pretty-logs = ["common/pretty-logs"]
json-logs = ["common/json-logs"]
