[workspace]
members = [
    ".",
    "crates/common",
    "crates/sheets/core",
    "crates/sheets/adapters/web",
    "crates/sheets/adapters/s3",
    "crates/sheets/adapters/db",
    "crates/sheets/adapters/pdf",
    "crates/actions/core",
    "crates/actions/adapters/web",
    "crates/actions/adapters/pdf",
]
resolver = "2"

[workspace.package]
version = "0.1.0" # x-release-please-version
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
actix-web = "4"
actix-multipart = "0.7"
actix-cors = "0.7.1"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid", "macros"] }
tempfile = "3.21"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres", "minio", "blocking"] }
rstest = "0.26"
pretty_assertions = "1.4"
dotenvy = "0.15"
tokio = { version = "1.47", features = ["rt", "macros"] }
mockall = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
lopdf = "0.38"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
utoipa-actix-web = "0.1"
validator = { version = "0.20", features = ["derive"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.120.0"
url = "2"

[package]
name = "form-forge-api"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "form-forge-api"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"

[dependencies]
common = { path = "crates/common" }
sheets_core = { path = "crates/sheets/core" }
sheets_web = { path = "crates/sheets/adapters/web" }
sheets_s3 = { path = "crates/sheets/adapters/s3" }
sheets_db = { path = "crates/sheets/adapters/db" }
sheets_pdf = { path = "crates/sheets/adapters/pdf" }
actions_core = { path = "crates/actions/core" }
actions_web = { path = "crates/actions/adapters/web" }
actions_pdf = { path = "crates/actions/adapters/pdf" }
actix-web.workspace = true
actix-cors.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
anyhow.workspace = true
uuid.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-actix-web.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
lopdf.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true

[features]
default = ["pretty-logs"]
pretty-logs = ["common/pretty-logs"]
json-logs = ["common/json-logs"]
otel = ["common/otel"]
