[package]
name = "form-forge-api"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "form-forge-api"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"

[dependencies]
common.workspace = true
common_telemetry.workspace = true
sheets_core.workspace = true
sheets_web.workspace = true
sheets_s3.workspace = true
sheets_db.workspace = true
sheets_pdf.workspace = true
actions_core.workspace = true
actions_web.workspace = true
actions_pdf.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
anyhow.workspace = true
uuid.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-actix-web.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
common_pdf.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
lopdf.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true

[features]
default = ["pretty-logs"]
pretty-logs = ["common/pretty-logs"]
json-logs = ["common/json-logs"]
otel = ["common/otel"]
