[package]
name = "common_telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# OpenTelemetry dependencies (optional, for production tracing)
opentelemetry = { version = "0.27", features = ["metrics", "logs"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics", "logs"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client", "metrics", "logs"], optional = true }
opentelemetry-appender-tracing = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = ["pretty-logs"]
pretty-logs = []
json-logs = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-appender-tracing", "dep:tracing-opentelemetry"]
