[package]
name = "sheets_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio.workspace = true
pretty_assertions.workspace = true