[package]
name = "sheets_pdf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sheets_core.workspace = true
async-trait.workspace = true
tracing.workspace = true
lopdf.workspace = true

[dev-dependencies]
common_telemetry.workspace = true
tempfile.workspace = true
tokio.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
