[package]
name = "native"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition.workspace = true
license.workspace = true

[lib]
name = "native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
# Shared domain crates
sheets_core.workspace = true
actions_core.workspace = true
sheets_pdf.workspace = true
actions_pdf.workspace = true
common_telemetry.workspace = true
common_pdf.workspace = true

# Desktop adapters
sheets_fs.workspace = true
sheets_libsql.workspace = true

# Tauri
tauri.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-single-instance.workspace = true
tauri-plugin-window-state.workspace = true
tauri-plugin-store.workspace = true

# Runtime
tokio = { workspace = true, features = ["fs"] }
uuid.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
