[package]
name = "common"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
utoipa.workspace = true
lopdf.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = ["pretty-logs"]   # dev default
pretty-logs = []
json-logs = []