[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid.workspace = true
anyhow.workspace = true
serde.workspace = true
utoipa.workspace = true

# Feature forwarding to common_telemetry
common_telemetry.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde_json.workspace = true

[features]
default = ["pretty-logs"]
pretty-logs = ["common_telemetry/pretty-logs"]
json-logs = ["common_telemetry/json-logs"]
otel = ["common_telemetry/otel"]

[package.metadata.cargo-udeps.ignore]
# common_telemetry is used for feature forwarding only (not direct code usage)
normal = ["common_telemetry"]
