[package]
name = "actions_core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
serde_json.workspace = true

[dev-dependencies]
mockall.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true