[package]
name = "actions_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
serde_json.workspace = true

[dev-dependencies]
mockall.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true