[package]
name = "sheets_core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio.workspace = true
pretty_assertions.workspace = true