[package]
name = "sheets_fs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sheets_core.workspace = true
actions_core.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["fs"] }
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
pretty_assertions.workspace = true
