[package]
name = "sheets_libsql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sheets_core.workspace = true
actions_core.workspace = true
async-trait.workspace = true
libsql.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
pretty_assertions.workspace = true
