[package]
name = "actions_web"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../../../common" }
actions_core = { path = "../../core" }
actix-web.workspace = true
serde.workspace = true
uuid.workspace = true
utoipa.workspace = true
validator.workspace = true