[package]
name = "actions_web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../../common" }
actions_core = { path = "../../core" }
actix-web.workspace = true
serde.workspace = true
uuid.workspace = true
utoipa.workspace = true
validator.workspace = true