[package]
name = "sheets_db"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
sheets_core = { path = "../../core" }
actions_core = { path = "../../../actions/core" }
async-trait.workspace = true
sqlx = { workspace = true, features = ["chrono"] }
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
