[package]
name = "sheets_db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sheets_core = { path = "../../core" }
actions_core = { path = "../../../actions/core" }
async-trait.workspace = true
sqlx = { workspace = true, features = ["chrono"] }
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
