[package]
name = "sheets_db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sheets_core.workspace = true
actions_core.workspace = true
async-trait.workspace = true
sqlx = { workspace = true, features = ["chrono"] }
tracing.workspace = true
chrono.workspace = true
