[package]
name = "sheets_pdf"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../../../common" }
sheets_core = { path = "../../core" }
async-trait.workspace = true
tracing.workspace = true
lopdf.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true