[package]
name = "sheets_pdf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../../common" }
sheets_core = { path = "../../core" }
async-trait.workspace = true
tracing.workspace = true
lopdf.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true