[package]
name = "sheets_s3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sheets_core = { path = "../../core" }
actions_core = { path = "../../../actions/core" }
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
tempfile.workspace = true
