[package]
name = "sheets_web"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
sheets_core = { path = "../../core" }
common = { path = "../../../common" }
actix-web.workspace = true
actix-multipart.workspace = true
uuid.workspace = true
actix-files.workspace = true
utoipa.workspace = true
serde.workspace = true