[package]
name = "sheets_web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sheets_core = { path = "../../core" }
common = { path = "../../../common" }
actix-web.workspace = true
actix-multipart.workspace = true
uuid.workspace = true
utoipa.workspace = true
serde.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }